[gd_scene load_steps=2 format=3 uid="uid://ba0hec2dequmb"]

[ext_resource type="Script" path="res://Scenes/Components/Movement/DodgeComponent.gd" id="1"]

[node name="DodgeComponent" type="Node2D"]
script = ExtResource("1")

[node name="DodgeTimer" type="Timer" parent="."]
one_shot = true

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="DelayTimer" type="Timer" parent="."]
one_shot = true
